# ulearning-course

./: .env.example  .gitignore  README.md  pyproject.toml
docs/network/: 01-api-overview-and-domain-model.md  02-api-course-directory-and-content.md  03-api-study-record-and-sync.md  04-api-video-playback-and-behavior.md  05-api-course-55892-chapter-video-inventory.md  06-api-request-and-response-examples.md  07-api-field-dictionary-and-id-mapping.md  08-api-session-timeline-and-capture-requirements.md  12-api-test-page-and-question-answer.md  13-test-page-record-data-model.md
src/ulearning_course/: __init__.py  __main__.py
src/ulearning_course/api/: __init__.py  base.py  behavior_client.py  course_client.py  study_client.py
src/ulearning_course/cli/: __init__.py  main.py
src/ulearning_course/core/: __init__.py  auth.py  config.py  crypto.py
src/ulearning_course/models/: __init__.py  course.py  study_record.py  video.py
src/ulearning_course/services/: __init__.py  answer_service.py  course_service.py  smart_service.py  study_service.py
