[project]
name = "ulearning-course"
version = "0.1.0"
description = "DGUT Ulearning 课程"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pycryptodome>=3.23.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]

[project.scripts]
ulearning = "ulearning_course.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
